--- a/manifest.json
+++ b/manifest.json
@@ -104,6 +104,7 @@
         }
 	},
 	"plus": {
+		"allowsInlineMediaPlayback":true,
 		"splashscreen": {
 			"autoclose": true,/*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
 			"waiting": true
