--- a/manifest.json
+++ b/manifest.json
@@ -101,7 +101,7 @@
         },
         "NativeObj":{
         	"description": "原生对象"
-        },"OAuth":{},"Share":{}
+        },"OAuth":{}
 	},
 	"plus": {
 		"allowsInlineMediaPlayback":true,
@@ -111,7 +111,7 @@
 		},
 		"runmode": "liberate",/*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
 		"signature": "Sk9JTiBVUyBtYWlsdG86aHIyMDEzQGRjbG91ZC5pbw==",/*可选，保留给应用签名，暂不使用*/
-		"distribute": {"plugins":{"share":{"qq":{"appid":"zkdj.junquan.jkj.com.H5674","description":"QQ分享"},"weixin":{"appid":"zkdj.junquan.jkj.com.H5674","appsecret":"candy","description":"可选，微信分享"}}},
+		"distribute": {"plugins":{"share":{}},
 			"apple": {
 				"appid": "juncuan.com.cn.H56742060",/*iOS应用标识，苹果开发网站申请的appid，如io.dcloud.HelloH5*/
 				"mobileprovision": "",/*iOS应用打包配置文件*/
