--- a/.project
+++ b/.project
@@ -17,11 +17,21 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>com.aptana.projects.webnature</nature>
 		<nature>com.pandora.projects.ui.MKeyNature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
 			<id>1501685721107</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-node_modules</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1508720741364</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
